# async-python-sprint-2

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  content.py  output.txt  pyproject.toml
.github/workflows/: app-testing.yml
docs/: arch.puml  architecture.puml  classes_diagram.puml  classes_schema.md
src/: main.py
src/context/: __init__.py  manager.py
src/core/: exceptions.py  settings.py
src/helpers/: __init__.py  get_json_data.py
src/protocols/: __init__.py  contex_manager.py  state_manager.py  task.py  task_factory.py  task_pool.py
src/scheduler/: __init__.py  manager.py
src/schemas/: __init__.py  contex.py  enums.py  mixins.py  pipeline.py  response.py  state.py  task.py  task_result.py
src/state/: __init__.py  manager.py
src/task/: __init__.py  base.py  factory.py  file.py  http.py  pool.py
tests/: test_context_manager.py  test_scheduler.py  test_state_manager.py  test_task_factory.py
